--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 :root {
   --main-color: #068bf7;
   --secondary-color: #111;
-  --hover-color: #0a9dff;
-  --gray-color: #bdbdbd;
+  --hover-color: #004aeb;
+  --gray-color: #cacaca;
   --main-transition: .3s;
+  --section-padding: 100px;
 }
 /* End Var */
 
@@ -64,6 +65,85 @@ ul {
   }
 }
 /* Start Global Rules */
+
+/* Start Components */
+.main-title {
+  color: #ececec;
+  width: fit-content;
+  position: relative;
+  margin: 0 auto 80px auto;
+  font-size: 30px;
+  font-weight: 700;
+  padding: 10px 20px;
+  letter-spacing: -1.7px;
+  border: 2px solid var(--main-color);
+  transition: var(--main-transition);
+}
+
+.main-title:hover {
+  color: black;
+  border: 2px solid black;
+  transition-delay: .5s;
+}
+
+.main-title::before,
+.main-title::after {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  background-color: var(--main-color);
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.main-title::before {
+  left: -40px;
+}
+.main-title::after {
+  right: -40px;
+}
+
+.main-title:hover::before {
+  z-index: -1;
+  animation: left-move .5s linear forwards;
+}
+
+.main-title:hover::after {
+  z-index: -1;
+  animation: right-move .5s linear forwards;
+}
+
+@keyframes left-move {
+  50% {
+    left: 0;
+    width: 17px;
+    height: 17px;
+  }
+  100% {
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+}
+
+@keyframes right-move {
+  50% {
+    right: 0;
+    width: 17px;
+    height: 17px;
+  }
+  100% {
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+}
+
+/* Start Components */
 
 /* Start Header */
 .header {
@@ -216,7 +296,7 @@ ul {
   .header .container .logo {
     font-size: 21px;
   }
-  .header .container .main-nav > li a {
+  .header .container .main-nav > li > a {
     font-size: 13px;
     height: 40px;
     padding: 0 15px;
@@ -256,7 +336,8 @@ ul {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #0100444d;
+  background-color: #111;
+  /* background-color: #0100444d; */
   z-index: -1;
   transform: skewY(-6deg);
   transform-origin: top left;
@@ -363,5 +444,94 @@ ul {
 /* End landing */
 
 /* Start Article */
+.article {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  position: relative;
+}
 
+.article .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 40px;
+}
+
+.article .container .card {
+  background-color: #111;
+  border-radius: 6px;
+  overflow: hidden;
+  box-shadow: 0 0 10px #444;
+  transition: var(--main-transition);
+}
+
+.article .container .card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 0 12px #005ba5ad;
+}
+
+.article .container .card .text {
+  padding: 20px;
+  color: #ececec;
+}
+
+.article .container .card .text h1 {
+  margin: 0;
+  letter-spacing: -1px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.article .container .card .text p {
+  color: var(--gray-color);
+  padding: 10px 0 20px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #777;
+  line-height: 1.7;
+}
+
+.article .container .card .read-more {
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 3px solid black;
+  transition: var(--main-transition);
+}
+
+.article .container .card .read-more:hover h3 {
+  color: var(--hover-color);
+}
+
+.article .container .card .read-more:hover i {
+  animation: boucing-right 0.6s linear infinite;
+}
+
+@keyframes boucing-right {
+  100% {
+    transform: translateX(10px);
+  }
+}
+
+.article .container .card .read-more h3 {
+  color: var(--main-color);
+  font-size: 14px;
+  cursor: pointer;
+  transition: var(--main-transition);
+}
+
+.article .container .card .read-more i {
+  color: var(--main-color);
+}
+
+.article .container .card .image img {
+  max-width: 100%;
+}
+
+@media (max-width: 1170px) {
+  .article .container {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+}
 /* End Article */
