--- a/style.css
+++ b/style.css
@@ -554,7 +554,7 @@ ul {
   padding: 20px;
   background-color: #222;
   box-shadow: 0 0 10px #444;
-
+  transition: var(--main-transition);
 }
 
 .gallery .container .box .image {
@@ -644,7 +644,7 @@ ul {
   background-color: #ff3c00;
 }
 .features .container .box.time .image::before {
-  background-color: #00ffc8;
+  background-color: #009b7a;
 }
 .features .container .box.passion .image::before {
   background-color: #ff004c;
@@ -693,7 +693,7 @@ ul {
   background-color: #ff3c00;
 }
 .features .container .box.time .details h1::before {
-  background-color: #00ffc8;
+  background-color: #009b7a;
 }
 .features .container .box.passion .details h1::before {
   background-color: #ff004c;
@@ -707,7 +707,17 @@ ul {
   padding: 30px 10px;
 }
 
-.features .container .box button {
+.features .container .box .btn {
+  display: flex;
+  justify-content: center;
+  padding: 40px 0 20px;
+}
+
+.features .container .box .btn a {
+  z-index: 99;
+}
+
+.features .container .box .btn button {
   color: #ececec;
   margin: 20px auto;
   display: block;
@@ -722,28 +732,28 @@ ul {
   transition: var(--main-transition);
 }
 
-.features .container .box.quality button {
+.features .container .box.quality .btn button {
   border-color: #ff3c00;
 }
-.features .container .box.quality button {
+.features .container .box.quality .btn button {
   color: #ff3c00;
 }
 
-.features .container .box.time button {
-  border-color: #00ffc8;
+.features .container .box.time .btn button {
+  border-color: #009b7a;
 }
-.features .container .box.time button {
-  color: #00ffc8;
+.features .container .box.time .btn button {
+  color: #009b7a;
 }
 
-.features .container .box.passion button {
+.features .container .box.passion .btn button {
   border-color: #ff004c;
 }
-.features .container .box.passion button {
+.features .container .box.passion .btn button {
   color: #ff004c;
 }
 
-.features .container .box button::before {
+.features .container .box .btn button::before {
   content: "";
   position: absolute;
   top: 0;
@@ -751,24 +761,44 @@ ul {
   width: 0%;
   height: 100%;
   transition: var(--main-transition);
-  /* z-index: -1; */
+  z-index: -1;
 }
 
-.features .container .box.box.quality button::before {
+.features .container .box.quality .btn button::before {
   background-color: #ff3c00;
 }
-.features .container .box.box.time button::before {
-  background-color: #00ffc8;
+.features .container .box.time .btn button::before {
+  background-color: #009b7a;
 }
-.features .container .box.box.passion button::before {
+.features .container .box.passion .btn button::before {
   background-color: #ff004c;
 }
 
-.features .container .box:hover button::before {
+.features .container .box:hover .btn button::before {
   width: 100%;
 }
-.features .container .box:hover button {
+.features .container .box:hover .btn button {
   color: #ececec;
 }
 
+.features .container .box.quality:hover {
+  box-shadow: 0 0 12px #ff3c0086;
+  transform: translateY(-10px);
+}
+.features .container .box.time:hover {
+  box-shadow: 0 0 12px #009b798a;
+  transform: translateY(-10px);
+}
+.features .container .box.passion:hover {
+  box-shadow: 0 0 12px #ff004c83;
+  transform: translateY(-10px);
+}
 /* End Features */
+
+/* Start Testimonials */
+.testimonials {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: #111
+}
+/* End Testimonials */
