--- a/style.css
+++ b/style.css
@@ -1126,5 +1126,70 @@ ul {
 .services .container .box .info a:hover {
   color: var(--hover-color);
 }
-
 /* End Services */
+
+/* Start Skills */
+.our-skills {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+
+.our-skills .container {
+  display: flex;
+  align-items: center;
+}
+
+.our-skills .container .skills {
+  flex: 1;
+}
+
+.our-skills .container .skills .skill h3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #777;
+}
+
+.our-skills .container .skills .skill h3 span {
+  font-size: 12px;
+  font-weight: 400;
+  border: 1px solid var(--main-color);
+  padding: 3px 4px;
+  border-radius: 4px;
+  color: var(--main-color);
+  position: relative;
+}
+.our-skills .container .skills .skill h3 span::before {
+  content: "";
+  position: absolute;
+  bottom: -12px;
+  left: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid;
+  border-color: var(--hover-color) transparent transparent transparent;
+}
+
+.our-skills .container .skills .skill .progress {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  margin: 20px 0;
+  background-color: #222;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.our-skills .container .skills .skill .progress span {
+  position: absolute;
+  height: 100%;
+  background-color: var(--hover-color);
+
+}
+
+@media (max-width: 992px) {
+.our-skills .container img {
+  display: none;
+}
+}
+/* End Skills */
