--- a/style.css
+++ b/style.css
@@ -1193,3 +1193,107 @@ ul {
 }
 }
 /* End Skills */
+
+/* Start How It Works */
+.how-works {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: #111
+}
+
+.how-works .container {
+  display: flex;
+  align-items: center;
+}
+
+.how-works .container .main-img {
+  max-width: 100%;
+}
+
+.how-works .container .boxes {
+  flex: 1;
+  margin-left: 100px;
+}
+
+.how-works .container .boxes .box {
+  background-color: #222;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+  border: 2px solid #333;
+  border-radius: 6px;
+  box-shadow: 0 0 10px #333;
+  transition: var(--main-transition);
+}
+
+.how-works .container .boxes .box:hover {
+  border: 2px solid #00ac8742;
+}
+
+.how-works .container .boxes .box::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 2%);  
+  width: 0;
+  height: 0;
+  z-index: 1;
+  transition: var(--main-transition);
+}
+
+.how-works .container .boxes .box:hover::before {
+  width: 100%;
+  height: 100%;
+}
+
+.how-works .container .boxes .box img {
+  width: 64px;
+  margin-right: 30px;
+}
+
+.how-works .container .boxes .box .info h3 {
+  font-size: 23px;
+  font-weight: 700;
+  letter-spacing: -1.7px;
+  margin-bottom: 16px;
+  color: var(--main-color);
+}
+
+.how-works .container .boxes .box .info p {
+  font-size: 18px;
+  color: var(--gray-color);
+  line-height: 1.6;
+}
+
+@media (max-width: 992px) {
+  .how-works .container {
+    flex-direction: column;
+    gap: 50px;
+  }
+  .how-works .container .main-img {
+    max-width: 80%;
+  }
+  .how-works .container .boxes {
+    margin: 0;
+  }
+  .how-works .container .boxes .box {
+    flex-direction: column;
+    text-align: center;
+  } 
+  .how-works .container .boxes .box img {
+    margin: 0 0 30px;
+  }
+}
+/* Start How It Works */
+
+/* Start Events */
+.events {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+/* End Events */
