--- a/style.css
+++ b/style.css
@@ -1296,4 +1296,6 @@ ul {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
 }
+
+.events .container
 /* End Events */
