--- a/style.css
+++ b/style.css
@@ -1297,5 +1297,131 @@ ul {
   padding-bottom: var(--section-padding);
 }
 
-.events .container
+.events .container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.events .container img {
+  max-width: 450px;
+}
+
+.events .container .info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.events .container .info .time {
+  margin: 30px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  color: #ececec;
+}
+
+.events .container .info .time .unit {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid var(--main-color);
+  border-radius: 6px;
+  text-align: center;
+  width: 75px;
+  transition: var(--main-transition);
+  background-color: #0c0c0c;
+  cursor: context-menu;
+  transition: var(--main-transition);
+}
+
+.events .container .info .time .unit::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 4%);   
+  width: 0;
+  height: 0;
+  /* z-index: 1; */
+  transition: var(--main-transition);
+}
+
+.events .container .info .time .unit:hover::before {
+  width: 100%;
+  height: 100%;
+}
+
+.events .container .info .time .unit:hover {
+  box-shadow: 0 0 10px var(--box-shadow-color);
+  border: 1px solid #4cf9ff;
+}
+
+.events .container .info .time span {
+  display: block;
+}
+
+.events .container .info .time span:first-child {
+  font-size: 35px;
+  font-weight: 700;
+  color: var(--main-color);
+  padding: 15px;
+  color: var(--main-color);
+}
+
+.events .container .info .time span:last-child {
+  padding: 8px 0;
+  font-size: 13px;
+  border-top: 1px solid var(--main-color);
+}
+
+.events .container .info .text {
+  text-align: center;
+}
+
+.events .container .info .text h3 {
+  color: var(--main-color);
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: -2px;
+  padding-bottom: 15px;
+}
+
+.events .container .info .text p {
+  font-size: 17px;
+  color: #777;
+  line-height: 1.7;
+}
+
+.events .container .subscribe {
+  width: 100%;
+}
+
+@media (max-width: 992px) {
+  .events .container img {
+    display: none;
+  }
+  .events .container .info {
+    text-align: center;
+  }
+  .events .container .info .text h3 {
+    font-size: 27px;
+    margin-top: 40px;
+  }
+  .events .container .info .text p {
+    font-size: 14px;
+  }
+}
+@media (max-width: 667px) {
+  .events .container .info .text h3 {
+    font-size: 27px;
+    margin-top: 40px;
+  }
+  .events .container .info .text p {
+    font-size: 14px;
+  }
+}
 /* End Events */
