--- a/style.css
+++ b/style.css
@@ -1523,7 +1523,7 @@ ul {
 .pricing .container .card::after {
   content: "";
   position: absolute;
-  background-color: rgba(255, 255, 255, 2%);  
+  background-color: rgba(255, 255, 255, 0.7%);  
   width: 0;
   height: 50%;
   transition: var(--main-transition);
@@ -1545,9 +1545,28 @@ ul {
   position: relative;
   transform: translateY(-30px);
 }
-.pricing .container .card .label {
+
+.pricing .container .popular .label {
   position: absolute;
-  color: #ececec;
+  color: black;
+  writing-mode: vertical-rl;
+  background-color: var(--main-color);
+  font-weight: bold;
+  padding: 10px 10px 35px 10px;
+  font-size: 18px;
+  right: 20px;
+  width: 40px;
+}
+.pricing .container .popular .label::before {
+  content: "";
+  position: absolute; 
+  bottom: -1px;
+  left: 0;
+  border: 20px solid;
+  border-color: transparent transparent #222 transparent;
+  width: 0;
+  height: 0;
+  transition: var(--main-transition);
 }
 
 .pricing .container .card .head {
@@ -1582,6 +1601,48 @@ ul {
   color: #777;
   font-size: 16px;
   letter-spacing: -1px;
+}
+
+.pricing .container .card .info li {
+  font-size: 18px;
+  font-weight: 400;
+  color: #888;
+  letter-spacing: -1px;
+  padding: 20px;
+  border-top: 1px solid #333;
+}
+
+.pricing .container .card .info li i {
+  margin-right: 5px;
+  color: var(--main-color);
+}
+
+.pricing .container .card a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 30px auto;
+  text-decoration: none;
+}
+
+.pricing .container .card a button {
+  background-color: transparent;
+  color: var(--main-color);
+  border: 3px solid var(--main-color);
+  padding: 15px;
+  font-size: 17px;
+  font-weight: 700;
+  letter-spacing: -1px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: var(--main-transition);
+  z-index: 99;
+}
+
+.pricing .container .card a button:hover {
+  color: black;
+  background-color: var(--hover-color);
+  border: 3px solid var(--hover-color);
 }
 
 @media (max-width: 1200px) {
