--- a/style.css
+++ b/style.css
@@ -40,7 +40,25 @@ ul {
 /* End Global Rules  */
 
 /* Start Create Custom Scrollbars */
-
+::-webkit-scrollbar {
+  width: 22px;
+  transition: var(--main-transition);
+}
+::-webkit-scrollbar-track {
+  background-color: #222;
+  /* box-shadow: 0 0 11px #555 inset; */
+  border-radius: 100vw;
+  margin-block: 15px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 100vw;
+  background-color: var(--main-color);
+  transition: var(--main-transition);
+  border: 4px solid #222;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--hover-color);
+}
 /* End Create Custom Scrollbars */
 
 /* Start Global Rules */
