--- a/style.css
+++ b/style.css
@@ -166,8 +166,26 @@ ul {
     border-radius: 0;
   }
 }
-
 /* Start Components */
+
+/* Start Animation Blocks */
+@keyframes appear {
+  form {
+    opacity: 0;
+    scale: 0.5;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
+
+.block {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0;
+}
+/* End Animation Blocks */
 
 /* Start Header */
 .header {
@@ -1693,3 +1711,108 @@ ul {
   }
 }
 /* End Pricing */
+
+/* Start Videos */
+.videos {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+
+.videos .container {
+  display: flex;
+  justify-content: center;
+}
+
+.videos .container .holder {
+  color: #ececec;
+  flex: 1;
+  min-width: 300px;
+  border-top: 2px solid #222;
+  border-bottom: 2px solid #222;
+  border-left: 2px solid #222;
+}
+
+.videos .container .holder .name {
+  color: var(--main-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px ;
+  background-color: #111;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.videos .container .holder .list .video {
+  padding: 20px;
+  cursor: pointer;
+  transition: var(--main-transition);
+}
+.videos .container .holder .list .video:not(:last-child) {
+  border-bottom: 1px solid #222;
+}
+
+.videos .container .holder .list .video:hover {
+  background-color: #111111a1;
+  box-shadow: 0 0 8px #444;
+}
+
+.videos .container .holder .list .video:hover h4 {
+  color: var(--main-color);
+}
+
+.videos .container .holder .list .video h4 {
+  font-size: 15px;
+  font-weight: 500;
+  color: #ececec;
+  margin-bottom: 10px;
+  transition: var(--main-transition);
+}
+
+.videos .container .holder .list .video span {
+  color: #777;
+}
+
+.videos .container .preview {
+  background-color: #1f1e1eb7;
+  padding: 10px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-top: 2px solid #222;
+  border-bottom: 2px solid #222;
+  border-right: 2px solid #222;
+}
+
+.videos .container .preview img {
+  max-width: 100%;
+}
+
+.videos .container .preview h4 {
+  background-color: #222;
+  color: #ececec;
+  padding: 20px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+@media (max-width: 991px) {
+  .videos .container {
+    flex-direction: column;
+  }
+  .videos .container .list {
+    border: 2px solid #222;
+  }
+  .videos .container .preview {
+    border: 2px solid #222;
+  }
+  .videos .container .preview img {
+    width: 100%;
+    padding-bottom: 15px;
+  }
+  .videos .container .preview {
+    text-align: center;
+  }
+}
+/* End Videos */
