--- a/style.css
+++ b/style.css
@@ -1456,63 +1456,63 @@ ul {
 }
 
 .events .container .subscribe {
-  margin-top: 20px;
-  padding: 30px;
   width: 100%;
-  background-color: #11111167;
-  border-radius: 6px;
-  border: 1px solid #222;
-  box-shadow: 0 0 10px #333;
-  transition: var(--main-transition);
+  margin-top: 50px;
 }
 
-.events .container .subscribe form input {
-  display: block;
-  margin: 10px auto;
-  width: 50%;
-  padding: 20px;
-  border: none;
-  border-radius: 6px;
+.events .container .subscribe form {  
+  width: 600px;
   background-color: #111;
-  color: #ececec;
-  font-size: 15px;
-  font-weight: 600;
-  outline: none;
-  transition: var(--main-transition);
+  margin: 20px auto;
+
+  display: flex;
+  padding: 30px;
+  border-radius: 50px;
+  gap: 40px;
 }
 
-.events .container .subscribe form textarea {
-  display: block;
-  margin: 10px auto;
-  width: 50%;
-  height: 200px;
+.events .container .subscribe form input[type="email"] {
+  flex: 1;
   padding: 20px;
-  border: none;
-  border-radius: 6px;
-  background-color: #111;
   color: #ececec;
-  font-size: 15px;
-  font-weight: 600;
-  outline: none;
+  background-color: #222;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 50px;
+  border: none;
+  caret-color: #ececec;
   transition: var(--main-transition);
-  resize: none;
-}
-.events .container .subscribe form textarea:focus,
-.events .container .subscribe form input:not(.sub):focus {
-  width: 51%;
-  box-shadow: 0 0 20px #222 inset;
 }
 
-.events .container .subscribe form .sub {
-  font-size: 18px;
-  font-weight: bold;
-  color: black;
-  cursor: pointer;
+.events .container .subscribe form input:focus {
+  outline: none;
+  box-shadow: 0 0px 15px #333 inset;
+}
+
+.events .container .subscribe form input[type="email"]::placeholder {
+  transition: opacity var(--main-transition);
+}
+
+.events .container .subscribe form input:focus::placeholder {
+  opacity: 0;
+}
+
+.events .container .subscribe form input[type="submit"] {
   background-color: var(--main-color);
+  border-radius: 50px;
+  padding: 20px;
+  letter-spacing: -0.5px;
+  border: none;
+  color: black;
+  font-size: 17px;
+  font-weight: 700;
+  cursor: pointer;
   transition: var(--main-transition);
 }
-.events .container .subscribe form .sub:hover {
+
+.events .container .subscribe form input[type="submit"]:hover {
   background-color: var(--hover-color);
+  box-shadow: 0 0px 10px var(--box-shadow-color);
 }
 
 @media (max-width: 992px) {
@@ -1522,24 +1522,11 @@ ul {
   .events .container .info {
     text-align: center;
   }
-  .events .container .info .text {
-    margin-bottom: 40px;
-  }
   .events .container .info .text h3 {
     font-size: 27px;
   }
   .events .container .info .text p {
     font-size: 14px;
-  }
-  .events .container .subscribe form input {
-    width: 90%;
-  }
-  .events .container .subscribe form textarea {
-    width: 90%;
-  }
-  .events .container .subscribe form textarea:focus,
-  .events .container .subscribe form input:not(.sub):focus {
-    width: 91%;
   }
 }
 
@@ -1550,6 +1537,20 @@ ul {
   }
   .events .container .info .text p {
     font-size: 14px;
+  }
+
+  .events .container .subscribe form {
+    max-width: 100%;
+    border-radius: 5px;
+    padding: 15px;
+    flex-direction: column;
+    gap: 15px;
+  }
+  .events .container .subscribe form input[type="email"] {
+    border-radius: 5px;
+  }
+  .events .container .subscribe form input[type="submit"] {
+    border-radius: 5px;
   }
 }
 /* End Events */
@@ -1816,3 +1817,112 @@ ul {
   }
 }
 /* End Videos */
+
+/* Start Stats */
+.stats {
+  position: relative;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+
+  background-image: url(media/stats1.jpg);
+  background-size: cover;
+  box-shadow: 0 0 350px black inset;
+}
+.stats::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2222223b; /* Semi-transparent white overlay */
+  pointer-events: none; /* Ensure it doesn't block interactions */
+}
+
+.stats .title {
+  width: fit-content;
+  margin: 0 auto;
+  font-size: 39px;
+  font-weight: 700;
+  transition: var(--main-transition);
+  z-index: 99;
+  letter-spacing: -1.7px;
+  color: #ececec;
+}
+
+.stats .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+  margin-top: 60px;
+}
+
+.stats .container .box {
+  background-color: #222;
+  color: #ececec;
+  padding: 30px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  transition: .5s;
+  position: relative;
+}
+.stats .container .box::before,
+.stats .container .box::after {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 0;
+  background-color: var(--main-color);
+  transition: .7s;
+}
+
+.stats .container .box::before {
+  bottom: 0;
+  left: 0;
+}
+
+.stats .container .box::after {
+  top: 0;
+  right: 0;
+}
+
+.stats .container .box:hover::before {
+  height: 100%;
+}
+
+.stats .container .box:hover::after {
+  height: 100%;
+}
+
+.stats .container .box:hover {
+  box-shadow: 0 0px 10px var(--box-shadow-color);
+}
+
+.stats .container .box i {
+  color: #c4c4c4;
+  font-size: 40px;
+}
+
+.stats .container .box .number {
+  font-size: 50px;
+  font-weight: 700;
+  padding: 15px 0;
+  color: #c4c4c4;
+}
+
+.stats .container .box .text {
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--main-color);
+  letter-spacing: -0.5px;
+}
+
+@media (max-width: 667px) {
+  .stats .title {
+    font-size: 30px;
+  }
+}
+/* End Stats */
