--- a/style.css
+++ b/style.css
@@ -1289,7 +1289,7 @@ ul {
 }
 
 .how-works .container .boxes .box:hover {
-  border: 2px solid #00ac8742;
+  border: 2px solid #00a6ac42;
 }
 
 .how-works .container .boxes .box::before {
@@ -1803,7 +1803,9 @@ ul {
     flex-direction: column;
   }
   .videos .container .list {
-    border: 2px solid #222;
+    border-top: 2px solid #222;
+    border-right: 2px solid #222;
+    border-bottom: 2px solid #222;
   }
   .videos .container .preview {
     border: 2px solid #222;
@@ -1921,9 +1923,6 @@ ul {
 }
 
 @media (max-width: 667px) {
-  .stats {
-    background-image: url(media/stats2.jpg);
-  }
   .stats .title {
     font-size: 30px;
   }
