--- a/style.css
+++ b/style.css
@@ -87,7 +87,23 @@ ul {
     width: 1170px;
   }
 }
-/* Start Global Rules */
+
+.spikes {
+  position: relative;
+}
+.spikes::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 30px;
+  /* background-color: red; */
+  z-index: 1;
+  background-image: linear-gradient(135deg, black 25%, transparent 25%),
+  linear-gradient(223deg, black 25%, transparent 25%);
+  background-size: 40px 40px;
+}
+/* End Global Rules */
 
 /* Start Components */
 .main-title {
