Update animation comment in style.css

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ ul {
   animation-timeline: view();
   animation-range: entry 0;
 }
-/* End Animation Blocks */
+/* End Animation */
 
 /* Start Header */
 .header {
