Correct comment case for RTL direction

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  /* Direction: rtl; */
+  /* Direction: RTL; */
   font-family: "Open Sans", sans-serif;
   background-color: black;
 }
